--- a/BlockedFrontend/templates/admin/courtorders_edit.html
+++ b/BlockedFrontend/templates/admin/courtorders_edit.html
@@ -4,6 +4,16 @@
 
 {% set pagetitle = "Legal Requests Admin" %}
 
+{% block pagestyle %}
+.delete-cell {
+    min-height: 64px;
+    padding-top: 16px;
+}
+.deletebtn {
+    margin-top: 12px;
+}
+{% endblock %}
+
 {% block page_script %}
 $(document).ready(function(){
     $('#addrow').click(function(){
@@ -105,7 +115,7 @@ $(document).ready(function(){
         <div class="col-md-2">
       {{ forms.text_field('Expiry Date', 'expiry_date', order.expiry_date, placeholder='yyyy-mm-dd') }}
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 delete-cell">
           {{ forms.check_field('Delete', 'delete', order.id, False) }}
         </div>
     </div>
@@ -148,8 +158,8 @@ $(document).ready(function(){
     <div class="col-md-2">
   {{ forms.text_field('Expiry Date', 'expiry_date', '', placeholder='yyyy-mm-dd') }}
     </div>
-    <div class="col-md-2" style="vertical-align: bottom">
-      <button class="btn btn-sm btn-default deletebtn"><span class="glyphicon glyphicon-icon-delete"></span></button>
+    <div class="col-md-2 delete-cell">
+      <button class="btn btn-sm btn-default deletebtn"><span class="glyphicon glyphicon-remove"></span></button>
     </div>
   </div>
 </div>
