--- a/BlockedFrontend/templates/admin/tests_edit.html
+++ b/BlockedFrontend/templates/admin/tests_edit.html
@@ -9,7 +9,7 @@
   <div class="col-md-9">
     <form class="form" method="POST" action="{{ url_for('.tests_update') }}">
         <input type="hidden" name="id" value="{{ test.id|null }}" />
-        <legend>Add test case</legend>
+        <legend>{% if test.id %}Edit{% else %}Add{% endif %} test case</legend>
 
         {{ forms.text_field('Name', 'name', test.name) }}
         {{ forms.textarea_field('Description', 'description', test.name) }}
@@ -20,13 +20,14 @@
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#source" aria-controls="source" role="tab" data-toggle="tab">Source</a></li>
             <li role="presentation"><a href="#rate" aria-controls="rate" role="tab" data-toggle="tab">Rate</a></li>
+            <li role="presentation"><a href="#repeat" aria-controls="repeat" role="tab" data-toggle="tab">Repeat</a></li>
             <li role="presentation"><a href="#networks" aria-controls="networks" role="tab" data-toggle="tab">Networks</a></li>
           </ul>
 
           <!-- Tab panes -->
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="source">
-                <h3>URL Source</h3>
+                <h3>URL Selection</h3>
                 <input type="hidden" name="source" value="tag" />                
                 {# <input type="radio" name="source" value="query" {{ 'checked' if test.filter else '' }} />
                 {{ forms.select_field('Filter set', 'filter', test.filter, ['']+filters) }} #}
@@ -56,30 +57,28 @@
                 {% endfor %}
                 </table>            
             </div>
-            <div role="tabpanel" class="tab-pane" id="rate">
-            {# forms.text_field('Repeat Interval', 'repeat_interval', test.repeat_interval) #}
+            
+            <div role="tabpanel" class="tab-pane" id="repeat">
+                <h3>Repeat</h3>
+                <div class="row">
+                    <div class="col-md-2" style="padding-top: 20px">
+                        {{ forms.check_field("Enable","repeat_enable", '1', test.repeat_interval != None) }}
+                    </div>
+                {{ interval('repeat_interval', test.repeat_interval, default_unit='day', units=['day','month','year']) }}
+                </div>
+            </div>
 
+            <div role="tabpanel" class="tab-pane" id="rate">
             <h3>Rate</h3>
             <div class="row">
-                <div class="col-md-4">{{ forms.text_field('Send URLs', 'batch_size', test.batch_size or 250) }}</div>
-                <div class="col-md-4">{{ forms.text_field('Every ', 'check_interval_num', 
-                         test.check_interval.days if test.check_interval.days 
-                    else test.check_interval.seconds / 3600.0 if test.check_interval.seconds > 1800 
-                    else test.check_interval.seconds / 60.0 if test.check_interval_seconds 
-                    else 5 
-                    ) }}</div>
-                <div class="col-md-4">{{ forms.select_field('', 'check_interval_unit', 
-                'day' if test.check_interval.days else 'hour' if test.check_interval.seconds > 1800 else 'min', 
-                ['min','hour','day'],  ) }}</div>
+                {{ forms.text_field('Send URLs', 'batch_size', test.batch_size or 250, css='col-md-4') }}
+                {{ interval('check_interval', test.check_interval) }}
             </div>
 
             </div>
           </div>
 
         </div>
-
-
-        {# forms.text_field('Check Interval', 'check_interval', test.check_interval) #}
         
         
         {{ forms.submit('Submit') }}
@@ -98,3 +97,26 @@
 {% block page_script %}
 
 {% endblock %}
+
+{% macro interval(name, value, default_unit='min', units=['min','hour','day']) %}
+{{ forms.text_field('Every', name+'_num',
+                    5 if value == None else
+                    value.days / 365.0 if value.days > 720 else
+                    value.days / 30 if value.days > 32 else
+                    value.days if value.days else  
+                    value.seconds / 3600.0 if value.seconds > 1800  else 
+                    value.seconds / 60.0 if value.seconds else
+                    5,
+                    css='col-md-4'
+                    ) }}
+{{ forms.select_field('unit', name+'_unit', 
+    default_unit if value == None else
+    'year' if value.days > 720 else
+    'month' if value.days > 32 else
+    'day' if value.days else 
+    'hour' if value.seconds > 1800 else
+    default_unit, 
+    units,  
+    css='col-md-4'
+    ) }}
+{% endmacro %}
