--- a/BlockedFrontend/templates/savedlists/show_list.html
+++ b/BlockedFrontend/templates/savedlists/show_list.html
@@ -31,8 +31,8 @@
     <div class="col-md-7">
 
 <h3>{{ itemcount }} {{ "entry" if itemcount == 1 else "entries" }}
-    {% if network %}
-    <small>{% if request.args.exclude %}excluding{% else %}on{% endif %} {{ network }}</small>
+    {% if request.args.network %}
+    <small>{% if request.args.exclude %}excluding{% else %}on{% endif %} {{ request.args.network }}</small>
     {% endif %}
 </h3>
 {% if request.args.status %}
@@ -41,23 +41,42 @@
     </div>
     <div class="col-md-5">
 
+        <div class="btn-group">
         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="glyphicon glyphicon-filter"></span>
             Filter by ISP
-            {%- if network %} ({{ 'exc. ' if request.args.exclude|default('') else '' }}{{ network }}) {%- endif %}
+            {%- if request.args.network %} ({{ 'exc. ' if request.args.exclude|default('') else '' }}{{ request.args.network }}) {%- endif %}
             <span class="caret"></span>
         </button>
-        <ul class="dropdown-menu">
-            <li><a href="{{ url_for('.show_list', name=savedlist.name, status=request.args.status|default('')) }}">( all )</a></li>
+        <ul class="dropdown-menu" id="filter-dropdown">
+            <li><a href="{{ url_for('.show_list', **args(network=None) ) }}">( all )</a></li>
             {% for isp in config.ISPS|sort %}
-            <li><a href="{{ url_for('.show_list', name=savedlist.name, network=isp, status=request.args.status|default('')) }}">{{ isp }}</a></li>
+            <li><a href="{{ url_for('.show_list', **args(network=isp) ) }}">{{ isp }}</a></li>
             {% if isp == 'BT-Strict' %}
-            <li><a href="{{ url_for('.show_list', name=savedlist.name, network=isp, exclude=1, status=request.args.status|default('')) }}">Exclude {{ isp }}</a></li>
+            <li><a href="{{ url_for('.show_list', **args(network=isp, exclude=1) ) }}">Exclude {{ isp }}</a></li>
             {% endif %}
             {% endfor %}
         </ul>
+        </div>
+        
+        <div class="btn-group">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="glyphicon glyphicon-filter"></span>
+            Filter by TLD
+            {%- if request.args.tld %} (.{{ request.args.tld }}) {%- endif %}
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" id="tld-dropdown">
+            <li><a href="{{ url_for('.show_list', **args(tld=None) ) }}">( all )</a></li>
+            {% for domain in ['uk','com','net','org'] %}
+            
+            <li><a href="{{ url_for('.show_list', **args(tld=domain) ) }}">.{{domain}}</a></li>
+            {% endfor %}
+            
+        </ul>
+        </div>
 
-        <a href="{{ url_for('.export_list', name=savedlist.name, network=request.args.network|default(''), status=request.args.status|default('')) }}" class="btn btn-default"><span class="glyphicon glyphicon-save"></span> Export</a>
+        <a href="{{ url_for('.export_list', name=savedlist.name) }}" class="btn btn-default"><span class="glyphicon glyphicon-save"></span> Export</a>
         {% if g.admin %}
         <a href="{{ url_for('.recheck_list', name=savedlist.name) }}" class="btn btn-default" id="refresh"><span class="glyphicon glyphicon-refresh"></span> Recheck</a>
         {% endif %}
@@ -128,8 +147,7 @@ Use the <strong>request unblock</strong> tool to start reporting the mistakes li
     </tr>
     {% endfor %}
 </table>
-{{ paging.page_list('.show_list',  page, pagecount, pagesize, name=savedlist.name, 
-    network=request.args.network|default(''), exclude=request.args.exclude|default(''), status=request.args.status|default('') ) }}
+{{ paging.page_list('.show_list',  page, pagecount, pagesize, **args(page=None) ) }}
 
     </div>
 </div>
