refactor results table and network hint; openrightsgroup/blocked-org-uk#401

--- a/BlockedFrontend/templates/blocked-uk/stats/probes.html
+++ b/BlockedFrontend/templates/blocked-uk/stats/probes.html
@@ -60,7 +60,7 @@
     {% else %}
     <i>Unfiltered</i>
     {% endif %}
-    {{ isp_info(d.description, networks, '') }}
+    {{ isp_info(d.description, '') }}
   </td>
   <td>
     {% if d.filter_enabled == True %}
