--- a/BlockedFrontend/templates/cms/network_description.part.html
+++ b/BlockedFrontend/templates/cms/network_description.part.html
@@ -1,6 +1,6 @@
 
-{% macro isp_info(name, networks, label=None) %}
-<a role="popover" tabindex="0" data-trigger="focus" data-toggle="popover" title="{{name}}" data-content="{{ networks.get(name, '') }}">{{label if label != None else name }}<span style="padding-left: 0.5em" class="glyphicon glyphicon-info-sign"></span></a>
+{% macro isp_info(name, label=None) %}
+<a role="popover" tabindex="0" data-trigger="focus" data-toggle="popover" title="{{name}}" data-content="{{ g.networks.get(name, '') }}">{{label if label != None else name }}<span style="padding-left: 0.5em" class="glyphicon glyphicon-info-sign"></span></a>
 {% endmacro %}
 
 {% macro popover_js() %}
