--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -144,35 +144,21 @@ Your feedback was successfully submitted.
 {% endif %}
 {% endblock %}
 
-{%macro results_table(id, results, show_lastblocked=True, show_category=False, show_status=False) %}
-<table id="{{ id }}" class="table results-table">
-<tr>
-  <th>ISP</th>
-  <th>Last Checked
-      {%- if g.admin and g.admin_level == 'admin' %} / Remote IP{% endif -%}
-  </th>
-  {% if show_category %}
+{% macro headings_category() %}
     <th>Category</th>
     <th></th>
-  {% elif show_lastblocked %}
+{% endmacro %}
+
+{% macro headings_lastblocked() %}
     <th>Last Blocked</th>
-  {% elif show_status %}
+{% endmacro %}
+
+{% macro headings_status() %}
     <th>Status</th>
-  {% else %}
-    <th></th>
-  {% endif %}
-</tr>
-{% for item in results %}
-<tr id="net_{{item.network_name|replace(' ','')}}" class="{{ 'error' if show_status and item.status in ('error','dnserror','sslerror') else ''}}">
-  <td >
-    {{ isp_info(item.network_name, networks) }}
-  </td>
-  <td>{{item.status_timestamp|fmtime}}
-  {% if g.admin and g.admin_level == 'admin' %}
-  <div class="remote_ip">{{ item.remote_ip|null }}</div>
-  {% endif %}
-  </td>
-  {% if show_category %}
+{% endmacro %}
+
+
+{% macro itemrow_category(item) %}
     <td>{{item.category}}
     {% if item.blocktype == 'COPYRIGHT' %}
     <p><i>This site has been
@@ -197,10 +183,47 @@ Your feedback was successfully submitted.
         <div><a href="https://uk.451unavailable.org/{{item.network_id}}/{{url}}" title="Error 451 page for {{url|noproto}} on {{item.network_id}}" >View 451 error page</a></div>
       {% endif %}
     </td>
-  {% elif show_lastblocked %}
+{% endmacro %}
+
+{% macro itemrow_lastblocked(item) %}
     <td>{{(item.last_blocked_timestamp|fmtime) or ''}}</td>
-  {% elif show_status %}
+{% endmacro %}
+
+{% macro itemrow_status(item) %}
     <td>{{ status_names(item.status) }}</td>
+{% endmacro %}
+
+{%macro results_table(id, results, headings=headings_lastblocked, itemrow=itemrow_lastblocked, display=None) %}
+
+<table id="{{ id }}" class="table results-table {{ 'hidden' if display == False else '' }}">
+<tr>
+  <th>ISP</th>
+  <th>Last Checked
+      {%- if g.admin and g.admin_level == 'admin' %} / Remote IP{% endif -%}
+  </th>
+  {{ headings() }}
+  
+  {% if show_category %}
+  {% elif show_lastblocked %}
+  {% elif show_status %}
+  {% else %}
+  {% endif %}
+</tr>
+{% for item in results %}
+<tr id="net_{{item.network_name|replace(' ','')}}" class="{{ 'error' if show_status and item.status in ('error','dnserror','sslerror') else ''}}">
+  <td >
+    {{ isp_info(item.network_name) }}
+  </td>
+  <td>{{item.status_timestamp|fmtime}}
+  {% if g.admin and g.admin_level == 'admin' %}
+  <div class="remote_ip">{{ item.remote_ip|null }}</div>
+  {% endif %}
+  </td>
+  {{ itemrow(item) }}
+  
+  {% if show_category %}
+  {% elif show_lastblocked %}
+  {% elif show_status %}
   {% endif %}
 </tr>
 {% endfor %}
@@ -248,7 +271,7 @@ Your feedback was successfully submitted.
 
 
 
-{{results_table('active', results_blocked, show_category=True) }}
+{{results_table('active', results_blocked, headings_category, itemrow_category, display=live) }}
 
 <div class="showmore">
 {% if activecount > 0 and pastcount > 0 %}
@@ -267,7 +290,7 @@ Your feedback was successfully submitted.
 <h3>{{pastcount if pastcount > 0 else 'No'}} past block{{ '' if pastcount == 1 else 's' }}</h3>
 {% endif %}
 
-{{ results_table('past', results_past) }}
+{{ results_table('past', results_past, headings_lastblocked, itemrow_lastblocked, display=live) }}
 
 </div>
 {% endif %}
@@ -275,7 +298,7 @@ Your feedback was successfully submitted.
 <div id="allresults">
 <h3>All other results</h3>
 
-{{ results_table('all', results_all, show_lastblocked = False, show_status=True) }}
+{{ results_table('all', results_all, headings_status, itemrow_status) }}
 </div>
 
 <div> <!-- actions -->
