tooltip for DNS error; openrightsgroup/blocked-org-uk#395

--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -4,7 +4,11 @@
 {% set banner_text_block = False %}
 
 {% macro status_names(status) %}
+{% if status == 'dnserror'  %}
+<a role="popover" tabindex="0" data-trigger="focus" data-toggle="popover" title="Address lookup error" data-content="The network address for this website could not be retrieved.  This may mean that the site does not exist or the site is experiencing technical problems.">Address lookup failed <span style="padding-left: 0.5em" class="glyphicon glyphicon-info-sign"></span></a>
+{% else %}
 {{ config.STATUS_NAMES.get(status, status) }}
+{% endif %}
 {% endmacro %}
 
 {% macro err451_link(url, network) %}
@@ -205,7 +209,7 @@ Your feedback was successfully submitted.
   
 </tr>
 {% for item in results %}
-<tr id="net_{{item.network_name|replace(' ','')}}" class="{{ 'error' if show_status and item.status in ('error','dnserror','sslerror') else ''}}">
+<tr id="net_{{item.network_name|replace(' ','')}}" class="{{ 'error' if item.status in ('error','dnserror','sslerror') else ''}}">
   <td >
     {{ isp_info(item.network_name) }}
   </td>
