--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -1,28 +1,11 @@
 {% extends "admin.page.html" %}
 {% import "paging.part.html" as paging %}
 {% import "forms.part.html" as forms %}
+{% import "emails.part.html" as emails %}
 
 {% set pagetitle = "ISP Report Admin: " + url + " on " + report.network_name %}
 
-{% macro show_message(message) %}
-{%- if message.is_multipart() -%}
-{{ show_message(message.get_payload()[0]) }}
-{%- else %}
-{%-   if message['content-transfer-encoding'] == 'base64' %}
-{%- set msg=message.get_payload().decode('base64').decode('utf8','replace') %}
-{%-   elif message['content-transfer-encoding'] == 'quoted-printable' %}  
-{%- set msg=message.get_payload().decode('quoted-printable').decode('utf8','replace') %}
-{%-   else %}
-{%- set msg=message.get_payload() %}
-{%-   endif %}
-{%- for line in (msg|stripstyletag).splitlines() %}
-{%- if (line|striptags).strip() %}
-{{ line|striptags }}
-{% endif %}
-{%- endfor %}
 
-{%- endif %}
-{%- endmacro %}
 
 {% block pagestyle %}
 .message {
@@ -244,7 +227,7 @@ Request sent to BBFC on {{ bbfc_report.created }}
         </div>
     </div>
     <div class="panel-body">
-        <p class="message" style="">{{ show_message(selected_msg) }}</p>
+        <p class="message" style="">{{ emails.show_message(selected_msg) }}</p>
     </div>
 </div>
 {% endif %}
