--- a/BlockedFrontend/templates/admin/ispreports_escalate.html
+++ b/BlockedFrontend/templates/admin/ispreports_escalate.html
@@ -1,27 +1,10 @@
 {% extends "admin.page.html" %}
 {% import "paging.part.html" as paging %}
 {% import "forms.part.html" as forms %}
+{% import "emailss.part.html" as email %}
 
 {% set pagetitle = "ISP Report Admin: " + url.url + " on " + report.network_name %}
 
-{% macro show_message(message) %}
-{%- if message.is_multipart() -%}
-{{ show_message(message.get_payload()[0]) }}
-{%- else %}
-{%-   if message['content-transfer-encoding'] == 'base64' %}
-{%- set msg=message.get_payload().decode('base64').decode('utf8','replace') %}
-{%-   elif message['content-transfer-encoding'] == 'quoted-printable' %}  
-{%- set msg=message.get_payload().decode('quoted-printable').decode('utf8','replace') %}
-{%-   else %}
-{%- set msg=message.get_payload() %}
-{%-   endif %}
-{%- for line in (msg|stripstyletag).splitlines() %}
-{%- if (line|striptags).strip() %}
-{{ line|striptags }}
-{% endif %}
-{%- endfor %}
-{%- endif %}
-{%- endmacro %}
 
 {% block body %}
 
@@ -38,7 +21,7 @@
             <h3>Mobile network response</h3>
             {{ forms.static_field('Date', 'reply_created', emailreply.created|fmtime) }}
             
-            {{ forms.textarea_field('Reply','previous', show_message(emailreply.decode()), rows=8) }}            
+            {{ forms.textarea_field('Reply','previous', email.show_message(emailreply.decode()), rows=8) }}            
             
             <h3>Additional contact information</h3>
             {{ forms.textarea_field('Submitted by', 'additional_contact', "Request originally submitted by " + report.name + " (" + report.email) }}
