improve character decoding

--- a/BlockedFrontend/templates/emails.part.html
+++ b/BlockedFrontend/templates/emails.part.html
@@ -2,10 +2,12 @@
 {%- if message.is_multipart() -%}
 {{    show_message(message.get_payload()[0], truncate) }}
 {%- else %}
+{%-   set enc = (message.get_params()|selectattr('0', 'equalto', 'charset')|first|last) -%}
+{%-   if not enc %}{% set enc = 'utf8' %}{% endif -%}
 {%-   if message['content-transfer-encoding'] == 'base64' %}
-{%-     set msg=message.get_payload().decode('base64').decode('utf8','replace') %}
+{%-     set msg=message.get_payload().decode('base64').decode(enc,'replace') %}
 {%-   elif message['content-transfer-encoding'] == 'quoted-printable' %}  
-{%-     set msg=message.get_payload().decode('quoted-printable').decode('utf8','replace') %}
+{%-     set msg=message.get_payload().decode('quoted-printable').decode(enc,'replace') %}
 {%-   else %}
 {%-     set msg=message.get_payload() %}
 {%-   endif %}
