--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -334,8 +334,8 @@ Your feedback was successfully submitted.
         <h4>This site has been submitted for unblocking</h4>
         <p>Reported on {{reports[0].created|fmtime}}</p>
         <p class="report-message"><span>&ldquo;</span>{{ reports[0].message }}<span>&rdquo;</span></p>
-        {% if reports|selectattr('reply_count')|select %}
-        <a class="btn btn-default" href="{{ url_for('unblock.view_replies', url=url) }}">View ISP replies</a>
+        {% if reports|selectattr('reply_count')|select and reports[0].allow_publish %}
+          <a class="btn btn-default" rel="nofollow" href="{{ url_for('unblock.view_replies', url=url) }}">View ISP replies</a>
         {% endif %}
       {% endif %}
     {% elif cjuf and cjuf.reason != 'block_appears_correct' %}
