--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -333,8 +333,10 @@ Your feedback was successfully submitted.
       {% else %}
         <h4>This site has been submitted for unblocking</h4>
         <p>Reported on {{reports[0].created|fmtime}}</p>
+        {% if reports[0].message %}
         <p class="report-message"><span>&ldquo;</span>{{ reports[0].message }}<span>&rdquo;</span></p>
-        {% if (reports|selectattr('reply_count')|list) and reports[0].allow_publish %}
+        {% endif %}
+        {% if (reports|selectattr('reply_count')|list) and reports[0].message %}
           <a class="btn btn-default" rel="nofollow" href="{{ url_for('unblock.view_replies', url=url) }}">View ISP replies</a>
         {% endif %}
       {% endif %}
