--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -336,7 +336,7 @@ Your feedback was successfully submitted.
         {% if reports[0].message %}
         <p class="report-message"><span>&ldquo;</span>{{ reports[0].message }}<span>&rdquo;</span></p>
         {% endif %}
-        {% if (reports|selectattr('reply_count')|list) and reports[0].message %}
+        {% if (reports|selectattr('reply_count')|list) and reports[0].message and g.admin %}
           <a class="btn btn-default" rel="nofollow" href="{{ url_for('unblock.view_replies', url=url) }}">View ISP replies</a>
         {% endif %}
       {% endif %}
