--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -16,7 +16,7 @@ td {
     display: none;
     }
 
-tr:hover * .action-button {
+tr:hover * a.action-button {
     display: inline-block;
 }
 
@@ -207,11 +207,11 @@ tr:hover * .action-button {
   </td>
   <td class="">
       <div class="btn-group action-button">
+          <a class="btn btn-default" href="{{url_for('.ispreports_view', url=report.url, network_name=report.network_name)}}">View report</a>
           <button class="dropdown-toggle btn btn-link btn-sm" title="Actions for {{ report.url }}" data-toggle="dropdown">
               <span class="glyphicon glyphicon-cog"></span> <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
-              <li><a class="" href="{{url_for('.ispreports_view', url=report.url, network_name=report.network_name)}}">View report</a></li>
     {% if report.status in ('new','pending') or (report.status == 'sent' and report.verified == 0) %}
         <li><a href="{{url_for('.ispreports_flag', url=report.url, status='cancelled', page=page)}}" class="text-warning">Cancel report</a></li>
         <li><a href="{{url_for('.ispreports_resend', url=report.url)}}" class="text-warning">Cancel report and Re-send</a></li>
